add divs and column reverse to footer

--- a/style.css
+++ b/style.css
@@ -935,6 +935,8 @@ video {
 
   .footer-box.left {
     align-items: center;
+    flex-direction: column-reverse;
+    text-align: center;
   }
 
   .map iframe {
