redo video section

--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ video {
   align-items: center;
   justify-content: center;
   gap: 12px;
-  background-image: url("");
+  background-image: url("images/video-new.png");
   background-position: center;
   background-repeat: none;
   background-size: cover;
@@ -509,7 +509,27 @@ video {
   overflow: hidden;
 }
 
-.gradient-overlay {
+.play-video-btn {
+  border: 1px solid white;
+  padding: 1rem;
+  font-size: 3rem;
+  color: #fff;
+background-color: rgba(0,0,0,.7);
+  font-family: EB Garamond, "Times New Roman", Times, serif;
+  width: 300px;
+  cursor: pointer;
+  transition: background-color .3s ease-in-out;
+}
+
+.play-video-btn:hover {
+  border: 1px solid #000;
+  padding: 1rem;
+  font-size: 3rem;
+  color: #000;
+background-color: rgb(230, 230, 230);
+}
+
+/* .gradient-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -521,7 +541,7 @@ video {
     rgba(0, 0, 0, 0.5)
   );
   z-index: 1;
-}
+} */
 
 /* Shipping Styles */
 #shipping-section {
@@ -602,7 +622,7 @@ video {
   width: 70%;
   padding: 1rem;
   text-align: center;
-  transition: background-color .3 ease-in-out;
+  transition: background-color 0.3 ease-in-out;
 }
 
 .footer-box.right a:hover {
@@ -894,8 +914,8 @@ video {
 
   /* Video Section */
 
-  .gradient-overlay {
-    height: 100vh;
+  #video-section {
+    background-image: url("images/video-new-mobile.png");
   }
 
   /* Shipping Mobile Styles */
