--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ body {
 .header-background {
   flex: 1;
   background-image: url("images/header-new.png");
+  background-color: rgb(34, 34, 34);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
