--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body {
 
 .header-background {
   flex: 1;
-  background-image: url("images/header-new.png");
+  background-image: url("images/header-new-darker.png");
   background-color: rgb(34, 34, 34);
   background-position: center;
   background-size: cover;
@@ -159,6 +159,59 @@ body {
   background-attachment: fixed;
   position: relative;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+/* Featured Item */
+.featured-item {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.featured-description {
+  color: #fff;
+  flex-basis: 50%;
+  font-family: EB Garamond, "Times New Roman", Times, serif;
+  padding: 4rem;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.featured-h2 {
+  font-size: 4rem;
+}
+
+.featured-description a {
+  background-color: rgb(230, 230, 230);
+  border: 1px solid rgb(230, 230, 230);
+  padding: 1rem;
+  width: 300px;
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.featured-description a:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.featured-image {
+  flex-basis: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+.featured-image img {
+  width: 60%;
 }
 
 /* Social Media Styles */
@@ -716,7 +769,7 @@ video {
 
   /* Header Mobile Styles */
   #header-section {
-    height: 90vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -736,6 +789,28 @@ video {
   .cloud img {
     height: 500px;
     width: 1000px;
+  }
+
+  /* Featured Item Mobile Styles */
+  .featured-item {
+    flex-direction: column-reverse;
+  }
+
+  .featured-image {
+    padding-top: 3rem;
+  }
+
+  .featured-h2 {
+    font-size: 3rem;
+    text-align: center;
+  }
+
+  .featured-description {
+    font-size: 1.5rem;
+  }
+
+  .featured-description a {
+    font-size: 1.5rem;
   }
 
   /* Social Media Mobile Styles */
