--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&family=Oxanium:wght@200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&family=Oxanium:wght@200..800&display=swap");
 
 * {
   margin: 0;
@@ -62,6 +62,8 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+  font-family: Quicksand, Arial, Helvetica, sans-serif;
+  font-size: 1.3rem;
 }
 
 .navbar .logo {
@@ -174,7 +176,7 @@ body {
 .featured-description {
   color: #fff;
   flex-basis: 50%;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   padding: 4rem;
   font-size: 2rem;
   display: flex;
@@ -224,7 +226,7 @@ body {
   align-items: center;
   width: 100%;
   background-color: rgb(230, 230, 230);
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
 }
 
 #social-media-section h2 {
@@ -254,7 +256,7 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
 }
 
 #merch-section h2 {
@@ -287,7 +289,7 @@ body {
   border: none;
   background-color: #444;
   color: #fff;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   font-size: 1.3rem;
   text-align: center;
 }
@@ -298,7 +300,7 @@ body {
 }
 
 .merch-card p {
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   font-size: 1.8rem;
   text-align: center;
 }
@@ -310,7 +312,7 @@ body {
 
 /* Overview Styles */
 #overview-section {
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   height: 100vh;
   padding: 2rem;
   display: flex;
@@ -347,7 +349,7 @@ body {
 }
 
 .overview-card p {
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   font-size: 1.8rem;
   text-align: center;
 }
@@ -375,7 +377,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
 }
 
 .stories-container {
@@ -418,7 +420,7 @@ body {
 
 .slogan-text-container {
   font-size: 2rem;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
 }
 
 .slogan-pic-container {
@@ -438,7 +440,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
 }
 
 #workshop-section h2 {
@@ -478,7 +480,7 @@ body {
   justify-content: center;
   height: 100vh;
   padding: 2rem;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
 }
 #about-section h2 {
   font-size: 4rem;
@@ -532,6 +534,10 @@ body {
   font-size: 1rem;
 }
 
+.faq-title {
+  margin-top: 2rem;
+}
+
 .faq-text {
   font-size: 1.5rem;
 }
@@ -570,7 +576,7 @@ video {
   font-size: 3rem;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.7);
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   width: 300px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
@@ -605,7 +611,7 @@ video {
   display: flex;
   align-items: center;
   flex-direction: column;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   overflow: hidden;
 }
 
@@ -654,7 +660,7 @@ video {
   padding: 1rem;
   background-color: rgb(34, 34, 34);
   color: #fff;
-  font-family: EB Garamond, "Times New Roman", Times, serif;
+font-family: Quicksand, Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
 }
 
@@ -809,6 +815,8 @@ video {
 
   .featured-description {
     font-size: 1.5rem;
+    padding: 1rem;
+    align-items: center;
   }
 
   .featured-description a {
