--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body {
 
 .header-background {
   flex: 1;
-  background-image: url("images/header-new-darker-compressed.png");
+  background-image: url("images/header-new-darker-compressed-again.png");
   background-color: rgb(34, 34, 34);
   background-position: center;
   background-size: cover;
@@ -382,6 +382,7 @@ body {
   margin-right: auto;
   text-decoration: none;
   color: #000;
+  cursor: pointer;
 }
 
 .read-more i {
@@ -837,6 +838,7 @@ video {
     height: 100%;
     display: flex;
     flex-direction: column;
+      background-image: url("images/header-mobile.png");
   }
 
   .header-background {
