--- a/style.css
+++ b/style.css
@@ -370,6 +370,8 @@ body {
   flex: 1;
   padding: 2rem;
   background-color: rgb(230, 230, 230);
+  font-size: 1.6rem;
+  line-height: 1.3;
 }
 
 .about-text-container h4 {
@@ -433,6 +435,8 @@ body {
   flex: 1;
   padding: 2rem;
   background-color: rgb(230, 230, 230);
+  font-size: 1.6rem;
+  line-height: 1.3;
 }
 
 /* Slogan Styles */
@@ -662,7 +666,7 @@ video {
 .how-to-order {
   font-weight: bolder;
   background-color: rgb(255, 121, 121);
-  display:block;
+  display: block;
   width: 300px;
   text-align: center;
   padding: 10px;
@@ -838,7 +842,7 @@ video {
     height: 100%;
     display: flex;
     flex-direction: column;
-      background-image: url("images/header-mobile.png");
+    background-image: url("images/header-mobile.png");
   }
 
   .header-background {
