add cart and remove featured item

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ body {
 }
 
 /* Featured Item */
-.featured-item {
+/* .featured-item {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -214,7 +214,7 @@ body {
 
 .featured-image img {
   width: 60%;
-}
+} */
 
 /* Merch Styles */
 #merch-section {
@@ -839,7 +839,7 @@ video {
 
   /* Header Mobile Styles */
   #header-section {
-    height: 100%;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     background-image: url("images/header-mobile.png");
@@ -863,7 +863,7 @@ video {
   }
 
   /* Featured Item Mobile Styles */
-  .featured-item {
+  /* .featured-item {
     flex-direction: column-reverse;
   }
 
@@ -884,7 +884,7 @@ video {
 
   .featured-description a {
     font-size: 1.5rem;
-  }
+  } */
 
   /* Social Media Mobile Styles */
 
