--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ body {
 
 .header-background {
   flex: 1;
-  background-image: url("images/header-new-darker-compressed-again.png");
+  background-image: url("images/header-new.png");
   background-color: rgb(34, 34, 34);
   background-position: center;
   background-size: cover;
@@ -842,7 +842,7 @@ video {
     height: 90vh;
     display: flex;
     flex-direction: column;
-    background-image: url("images/header-mobile.png");
+    background-image: url("images/header-mobile-compressed.png");
   }
 
   .header-background {
